[HUBZERO][#4506][PLG_COURSES_PROGRESS] quick fix for circle getting cut off in firefox

--- a/plugins/courses/progress/student.css
+++ b/plugins/courses/progress/student.css
@@ -288,6 +288,7 @@
 .grades .score {
 	font-size: 3em;
 	padding-bottom: 7px;
+	padding-left: 2px;
 }
 @media (max-width: 1050px) {
 	.grades .score {
